fix spacing issue in FF34 - news EZ

--- a/cliqz@cliqz.com/chrome/skin/browser.css
+++ b/cliqz@cliqz.com/chrome/skin/browser.css
@@ -1153,6 +1153,7 @@
   overflow: hidden;
   max-width: 550px;
   font-size: 14px;
+  line-height: 15px;
   height: 30px;
   margin-top: 5px;
 }
